// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlockRenderer tests > Block renderer snapshot test 1`] = `
<div>
  <section
    class="grid mt-2"
  >
    <img
      alt=""
      class="rounded justify-self-center dark:dark:opacity-75"
      data-nimg="1"
      decoding="async"
      height="500"
      loading="lazy"
      src="/_next/image?url=http%3A%2F%2Ftest.test.png&w=1080&q=75"
      srcset="/_next/image?url=http%3A%2F%2Ftest.test.png&w=640&q=75 1x, /_next/image?url=http%3A%2F%2Ftest.test.png&w=1080&q=75 2x"
      style="color: transparent;"
      width="500"
    />
  </section>
  <p
    class="mt-1"
  >
    test
  </p>
  <section
    class="text-sm rounded-md overflow-hidden shadow-sm mt-2"
  >
    <pre
      style="display: block; overflow-x: auto; padding: 0.5em; background: rgb(35, 35, 35); color: rgb(230, 225, 220);"
    >
      <code
        style="white-space: pre;"
      >
        <span
          style="color: rgb(109, 156, 190);"
        >
          test
        </span>
      </code>
    </pre>
  </section>
  <ol>
    <li
      class="list-decimal"
    >
      test
    </li>
    <li
      class="list-decimal"
    >
      test2
    </li>
  </ol>
  <p
    class="text-start"
  >
    <span
      class="italic text-lg"
    >
      "
      test
      "
    </span>
    <br />
    <span
      class="opacity-85 text-sm"
    >
      - 
      test
    </span>
  </p>
  <p
    class="mt-1"
  >
    test
  </p>
  <section
    class="grid gap-4 grid-cols-2"
  >
    <div
      class="self-center"
    >
      <p
        class="mt-1"
      >
        test
      </p>
    </div>
    <div
      class="self-center"
    >
      <p
        class="mt-1"
      >
        test
      </p>
    </div>
  </section>
  <table
    class="w-full"
  >
    <tbody>
      <tr>
        <th
          class="first:border-l-0 text-left pl-2 last:border-r-0 border-b-2 border"
        >
          test
        </th>
        <th
          class="first:border-l-0 text-left pl-2 last:border-r-0 border-b-2 border"
        >
          test
        </th>
      </tr>
      <tr>
        <td
          class="first:border-l-0 last:border-r-0 pl-2 border-b border"
        >
          test
        </td>
        <td
          class="first:border-l-0 last:border-r-0 pl-2 border-b border"
        >
          test
        </td>
      </tr>
    </tbody>
  </table>
  <section
    class="p-2 mt-2 px-4 flex bg-opacity-50 shadow-sm rounded-lg bg-gray-300 text-gray-600"
  >
    <div
      class="text-right"
    >
      test
    </div>
  </section>
  <h1>
    test
  </h1>
</div>
`;

exports[`BlockRenderer tests > Render All Blocks Render 1`] = `
<div>
  <section
    class="grid mt-2"
  >
    <img
      alt=""
      class="rounded justify-self-center dark:dark:opacity-75"
      data-nimg="1"
      decoding="async"
      height="500"
      loading="lazy"
      src="/_next/image?url=http%3A%2F%2Ftest.test.png&w=1080&q=75"
      srcset="/_next/image?url=http%3A%2F%2Ftest.test.png&w=640&q=75 1x, /_next/image?url=http%3A%2F%2Ftest.test.png&w=1080&q=75 2x"
      style="color: transparent;"
      width="500"
    />
  </section>
  <p
    class="mt-1"
  >
    test
  </p>
  <section
    class="text-sm rounded-md overflow-hidden shadow-sm mt-2"
  >
    <div
      class="flex px-1 py-1 items-center bg-gray-300/15"
    >
      <img
        alt="rs-logo"
        data-nimg="1"
        decoding="async"
        height="25"
        loading="lazy"
        src="/code-logos/rust-logo.svg"
        style="color: transparent;"
        width="25"
      />
      <p
        class="pl-2 text-gray-500"
      >
        Rust
      </p>
    </div>
    <pre
      style="display: block; overflow-x: auto; padding: 0.5em; background: rgb(35, 35, 35); color: rgb(230, 225, 220);"
    >
      <code
        class="language-typescript"
        style="white-space: pre;"
      >
        <span>
          test
        </span>
      </code>
    </pre>
  </section>
  <ol>
    <li
      class="list-decimal"
    >
      test
    </li>
    <li
      class="list-decimal"
    >
      test2
    </li>
  </ol>
  <p
    class="text-start"
  >
    <span
      class="italic text-lg"
    >
      "
      test
      "
    </span>
    <br />
    <span
      class="opacity-85 text-sm"
    >
      - 
      test
    </span>
  </p>
  <p
    class="mt-1"
  >
    test
  </p>
  <section
    class="grid gap-4 grid-cols-2"
  >
    <div
      class="self-center"
    >
      <p
        class="mt-1"
      >
        test
      </p>
    </div>
    <div
      class="self-center"
    >
      <p
        class="mt-1"
      >
        test
      </p>
    </div>
  </section>
  <table
    class="w-full"
  >
    <tbody>
      <tr>
        <th
          class="first:border-l-0 text-left pl-2 last:border-r-0 border-b-2 border"
        >
          test
        </th>
        <th
          class="first:border-l-0 text-left pl-2 last:border-r-0 border-b-2 border"
        >
          test
        </th>
      </tr>
      <tr>
        <td
          class="first:border-l-0 last:border-r-0 pl-2 border-b border"
        >
          test
        </td>
        <td
          class="first:border-l-0 last:border-r-0 pl-2 border-b border"
        >
          test
        </td>
      </tr>
    </tbody>
  </table>
  <section
    class="p-2 mt-2 px-4 flex bg-opacity-50 shadow-sm rounded-lg bg-gray-300 text-gray-600"
  >
    <div
      class="text-right"
    >
      test
    </div>
  </section>
  <h1>
    test
  </h1>
</div>
`;

exports[`Render Block Render 1`] = `
<div>
  <section
    class="grid mt-2"
  >
    <img
      alt=""
      class="rounded justify-self-center dark:dark:opacity-75"
      data-nimg="1"
      decoding="async"
      height="500"
      loading="lazy"
      src="/_next/image?url=http%3A%2F%2Ftest.test.png&w=1080&q=75"
      srcset="/_next/image?url=http%3A%2F%2Ftest.test.png&w=640&q=75 1x, /_next/image?url=http%3A%2F%2Ftest.test.png&w=1080&q=75 2x"
      style="color: transparent;"
      width="500"
    />
  </section>
  <p
    class="mt-1"
  >
    test
  </p>
  <section
    class="text-sm rounded-md overflow-hidden shadow-sm mt-2"
  >
    <div
      class="flex px-1 py-1 items-center bg-gray-300/15"
    >
      <img
        alt="rs-logo"
        data-nimg="1"
        decoding="async"
        height="25"
        loading="lazy"
        src="/code-logos/rust-logo.svg"
        style="color: transparent;"
        width="25"
      />
      <p
        class="pl-2 text-gray-500"
      >
        Rust
      </p>
    </div>
    <pre
      style="display: block; overflow-x: auto; padding: 0.5em; background: rgb(35, 35, 35); color: rgb(230, 225, 220);"
    >
      <code
        class="language-typescript"
        style="white-space: pre;"
      >
        <span>
          test
        </span>
      </code>
    </pre>
  </section>
  <ol>
    <li
      class="list-decimal"
    >
      test
    </li>
    <li
      class="list-decimal"
    >
      test2
    </li>
  </ol>
  <p
    class="text-start"
  >
    <span
      class="italic text-lg"
    >
      "
      test
      "
    </span>
    <br />
    <span
      class="opacity-85 text-sm"
    >
      - 
      test
    </span>
  </p>
  <p
    class="mt-1"
  >
    test
  </p>
  <section
    class="grid gap-4 grid-cols-2"
  >
    <div
      class="self-center"
    >
      <p
        class="mt-1"
      >
        test
      </p>
    </div>
    <div
      class="self-center"
    >
      <p
        class="mt-1"
      >
        test
      </p>
    </div>
  </section>
  <table
    class="w-full"
  >
    <tbody>
      <tr>
        <th
          class="first:border-l-0 text-left pl-2 last:border-r-0 border-b-2 border"
        >
          test
        </th>
        <th
          class="first:border-l-0 text-left pl-2 last:border-r-0 border-b-2 border"
        >
          test
        </th>
      </tr>
      <tr>
        <td
          class="first:border-l-0 last:border-r-0 pl-2 border-b border"
        >
          test
        </td>
        <td
          class="first:border-l-0 last:border-r-0 pl-2 border-b border"
        >
          test
        </td>
      </tr>
    </tbody>
  </table>
  <section
    class="p-2 mt-2 px-4 flex bg-opacity-50 shadow-sm rounded-lg bg-gray-300 text-gray-600"
  >
    <div
      class="text-right"
    >
      test
    </div>
  </section>
  <h1>
    test
  </h1>
</div>
`;
